# remmina-plugin-builder

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.h.in
.circleci/: config.yml
remmina/: plugin.h  remmina_plugin.h  remmina_trace_calls.h  types.h
remmina-plugin-dummy/: CMakeLists.txt
remmina-plugin-dummy/remmina-plugin-dummy/: CMakeLists.txt
remmina-plugin-dummy/remmina-plugin-dummy/src/: plugin_config.h  remmina_plugin.c
remmina-plugin-to-build/: README
